...
"Location is invalid." = "Location is invalid.";

/*Couldn't determine user location message*/
"Sorry we could not determine your location." = "Sorry we could not determine your location.";

/*Couldn't determine user location message*/
"Sorry, could not find your current location" = "Sorry, could not find your current location";

/*Missing address alert title*/
"Missing Address" = "Missing Address";

/*Missing address alert message*/
"Please enter a pickup address" = "Please enter a pickup address";
...
"Destination has been changed to \"%@\"" = "Destination has been changed to \"%@\"";

/*Version outdated message*/
"VERSION_OUTDATED" = "The version you are using is outdated. Please download the latest version from the App Store or contact support.";

/*Generic error title*/
"GENERIC_ERROR_TITLE" = "Oops";

/*Error while trying to cancel a ride already started*/
"Too Late" = "Too Late";

/*Error message - cannot cancel started trip*/
"The driver has started the trip. You cannot cancel after the trip has started." = "The driver has started the trip. You cannot cancel after the trip has started.";
...
"Login" = "Login";

/*Edit alert option*/
"Edit" = "Edit";

/*RegisterInfoVC - Validations*/
"Please enter your email address." = "Please enter your email address.";
"Please enter a valid email address." = "Please enter a valid email address.";
"Please enter a valid mobile phone number. i.e Minimum 8 digits and Max 15 digits" = "Please enter a valid mobile phone number. i.e Minimum 8 digits and Max 15 digits";
"Please enter your mobile phone number." = "Please enter your mobile phone number.";
"Please enter a valid mobile phone number. i.e Minimum 8 digits and Max 15 digits" = "Please enter a valid mobile phone number. i.e Minimum 8 digits and Max 15 digits";
"Please enter a password." = "Please enter a password.";
"Your password needs to be at least %li characters long." = "Your password needs to be at least %li characters long.";

/*Dismiss button title*/
"Dismiss" = "Dismiss";

/*Placeholder for SupportViewController*/
"Share Details" = "Share Details";

/*SupportVC subtitle*/
"Help" = "Help";
...
"SPLIT FARE" = "SPLIT FARE";

/*SplitFare remove confirmation message*/
"Do you want to remove the split with %@?" = "Do you want to remove the split with %@?";

/*Forgot password screen title*/
"Forgot Password" = "Forgot Password";

/*Change password screen title*/
"Change Password" = "Change Password";

/*Password don't match error message*/
"Passwords do not match" = "Passwords do not match";
...
"SAVE" = "SAVE";

/*Done button title*/
"DONE" = "DONE";

/*LoginVC Title*/
"Sign In" = "Sign In";

/*Sign In failed title*/
"SIGN IN FAILED" = "SIGN IN FAILED";

/*Sign In error and last sign in was with fb message*/
". Did you mean to sign in using Facebook?" = ". Did you mean to sign in using Facebook?";
...
