<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12118" systemVersion="16D30" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
    <device id="retina4_7" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <customFonts key="customFonts">
        <array key="Montserrat-Light.otf">
            <string>Montserrat-Light</string>
        </array>
        <array key="Montserrat-Regular.otf">
            <string>Montserrat-Regular</string>
        </array>
    </customFonts>
    <objects>
        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ForgotPasswordViewController">
            <connections>
                <outlet property="emailTextField" destination="NpA-qf-ccU" id="LKz-Yz-JWO"/>
                <outlet property="view" destination="glt-hL-RLI" id="hXv-i7-Hfz"/>
            </connections>
        </placeholder>
        <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
        <view contentMode="scaleToFill" id="glt-hL-RLI">
            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
            <subviews>
                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email" minimumFontSize="17" background="Field" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="NpA-qf-ccU" customClass="PaddedTextField">
                    <rect key="frame" x="25" y="82" width="325" height="40"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="40" id="NY9-1A-ypg"/>
                    </constraints>
                    <color key="textColor" red="0.23529411759999999" green="0.26274509800000001" blue="0.31372549020000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    <fontDescription key="fontDescription" name="Montserrat-Regular" family="Montserrat" pointSize="12"/>
                    <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="emailAddress" returnKeyType="next"/>
                    <connections>
                        <outlet property="delegate" destination="-1" id="KrZ-dR-LRQ"/>
                    </connections>
                </textField>
                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter your email address and we'll send you a link to reset your password." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rQf-gH-s7r">
                    <rect key="frame" x="25" y="16" width="325" height="38"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="38" id="Fyf-fE-WoJ"/>
                    </constraints>
                    <fontDescription key="fontDescription" name="Montserrat-Light" family="Montserrat" pointSize="14"/>
                    <color key="textColor" red="0.23529411764705882" green="0.2627450980392157" blue="0.31372549019607843" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    <nil key="highlightedColor"/>
                </label>
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MAl-F8-GqE" customClass="FlatButton">
                    <rect key="frame" x="25" y="137" width="325" height="50"/>
                    <color key="backgroundColor" red="0.090196078430000007" green="0.49803921569999998" blue="0.96470588239999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="50" id="k57-Pm-d9c"/>
                    </constraints>
                    <fontDescription key="fontDescription" name="Montserrat-Regular" family="Montserrat" pointSize="15"/>
                    <color key="tintColor" red="0.97254901959999995" green="0.32549019610000002" blue="0.050980392159999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    <state key="normal" title="Reset Password">
                        <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    </state>
                    <state key="highlighted">
                        <color key="titleColor" red="0.66666666666666663" green="0.66666666666666663" blue="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    </state>
                    <userDefinedRuntimeAttributes>
                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                            <integer key="value" value="20"/>
                        </userDefinedRuntimeAttribute>
                        <userDefinedRuntimeAttribute type="boolean" keyPath="layer.maskToBounds" value="YES"/>
                    </userDefinedRuntimeAttributes>
                    <connections>
                        <action selector="doForgotPassword:" destination="-1" eventType="touchUpInside" id="LMP-5A-oEy"/>
                    </connections>
                </button>
            </subviews>
            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
            <constraints>
                <constraint firstAttribute="trailing" secondItem="rQf-gH-s7r" secondAttribute="trailing" constant="25" id="1fx-jE-dAg"/>
                <constraint firstItem="MAl-F8-GqE" firstAttribute="top" secondItem="NpA-qf-ccU" secondAttribute="bottom" constant="15" id="5Za-W9-73z"/>
                <constraint firstItem="rQf-gH-s7r" firstAttribute="leading" secondItem="glt-hL-RLI" secondAttribute="leading" constant="25" id="IaV-e0-EsZ"/>
                <constraint firstItem="NpA-qf-ccU" firstAttribute="top" secondItem="rQf-gH-s7r" secondAttribute="bottom" constant="28" id="MiE-zL-HHr"/>
                <constraint firstItem="MAl-F8-GqE" firstAttribute="leading" secondItem="glt-hL-RLI" secondAttribute="leading" constant="25" id="WI7-VB-OyE"/>
                <constraint firstAttribute="trailing" secondItem="MAl-F8-GqE" secondAttribute="trailing" constant="25" id="Xwb-Hp-qLl"/>
                <constraint firstAttribute="trailing" secondItem="NpA-qf-ccU" secondAttribute="trailing" constant="25" id="ogp-mx-8pO"/>
                <constraint firstItem="NpA-qf-ccU" firstAttribute="leading" secondItem="glt-hL-RLI" secondAttribute="leading" constant="25" id="sYK-wV-1nY"/>
                <constraint firstItem="rQf-gH-s7r" firstAttribute="top" secondItem="glt-hL-RLI" secondAttribute="top" constant="16" id="sYM-43-juS"/>
            </constraints>
            <nil key="simulatedTopBarMetrics"/>
            <inset key="insetFor6xAndEarlier" minX="0.0" minY="-20" maxX="0.0" maxY="20"/>
        </view>
    </objects>
    <resources>
        <image name="Field" width="327" height="40"/>
    </resources>
</document>
